[project]
name = "meter-audit"
version = "0.1.0"
description = "Audit of utility invoices vs meter registries (IPU/ODPU) with anomaly detection"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pymupdf>=1.23",
  "pyyaml>=6.0",
]

[project.scripts]
meter-audit = "meter_audit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
